--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         #feedback {
             margin-top: 20px;
             font-weight: bold;
-            height: 200px;
+            height: 100px;
             flex: 2;
             text-align: center;
             border-radius: 25px;
@@ -166,10 +166,10 @@
     <div id="creator-info">Desarrollada por Diego Valdés</div>
     <div class="container">
         <h1>Alcanza tu ritmo</h1>
+        <div id="map" class="card">Mapa aquí</div>
         
 <div class="container">
-    <div class="button-group">
-        <div id="map" class="card">Mapa aquí</div>
+        <div class="button-group"></div>
         <div id="feedback" class="card">Información Carrera</div>
     </div>
     <button onclick="mostrarModalDatosUsuario()">Ingresa primero tus datos</button>
