--- a/index.html
+++ b/index.html
@@ -552,9 +552,8 @@
     if (path.getPath().getLength() > 0) {
         const carrera = {
             nombre: document.getElementById('nombreCarrera').value,
-            fecha: new Date().toLocaleString(), // Agregar la fecha
             distancia: distanciaRecorrida,
-            tiempo: (new Date() - startTime - pausedDuration)/60000,// Convertir a minutos
+            tiempo: new Date() - startTime - pausedDuration,
             calorias: caloriasQuemadas,
             ritmoPromedio: calcularRitmoPromedio(),
             ruta: path.getPath().getArray(),
@@ -572,7 +571,6 @@
     }
 }
 
-
 function mostrarCarrerasGuardadas() {
     const carrerasGuardadas = JSON.parse(localStorage.getItem('carrerasGuardadas')) || [];
     const contenedorCarreras = document.getElementById('carrerasGuardadas');
@@ -584,9 +582,9 @@ function mostrarCarrerasGuardadas() {
             <h4>${carrera.nombre}</h4>
             <p>Fecha: ${carrera.fecha}</p>
             <p>Distancia: ${carrera.distancia.tofixed(2)} km</p>
-            <p>Tiempo: ${carrera.tiempo.toFixed(2)} min</p> <!-- Redondear a 2 decimales -->
-            <p>Ritmo: ${carrera.ritmoPromedio ? carrera.ritmoPromedio.toFixed(2) : 'N/A'} min/km</p> <!-- Asegurarse de que exista -->
-            <p>Calorías: ${carrera.calorias.tofiexd(2)} kcal</p>
+            <p>Tiempo: ${carrera.tiempo.tofixed(2)} min</p>
+            <p>Ritmo: ${carrera.ritmo.tofixed(2)} min/km</p>
+            <p>Calorías: ${carrera.calorias.tofixed(2)} kcal</p>
             <button onclick="eliminarCarrera(${index})">Eliminar</button>
             <button onclick="exportarGPXGuardada(${index})">Exportar GPX</button>
         `;
