--- a/index.html
+++ b/index.html
@@ -553,10 +553,10 @@
     if (path.getPath().getLength() > 0) {
         const carrera = {
             nombre: document.getElementById('nombreCarrera').value,
-            distancia: distanciaRecorrida,
-            tiempo: new Date() - startTime - pausedDuration,
-            calorias: caloriasQuemadas,
-            ritmoPromedio: calcularRitmoPromedio(),
+            distancia: distanciaRecorrida.toFixed(2),
+            tiempo: ((new Date() - startTime - pausedDuration) / 60000).toFixed(2), // Convertir a minutos y mantener 2 decimales
+            calorias: caloriasQuemadas.toFixed(2),
+            ritmoPromedio: calcularRitmoPromedio().toFixed(2),
             ruta: path.getPath().getArray(),
             elevacion: elevationData,
             fecha: new Date().toLocaleString()
@@ -583,10 +583,10 @@ function mostrarCarrerasGuardadas() {
         carreraDiv.innerHTML = `
             <h4>${carrera.nombre}</h4>
             <p>Fecha: ${carrera.fecha}</p>
-            <p>Distancia: ${carrera.distancia} km</p>
-            <p>Tiempo: ${carrera.tiempo/600000} min</p>
-            <p>Ritmo: ${carrera.ritmo} min/km</p>
-            <p>Calorías: ${carrera.calorias} kcal</p>
+            <p>Distancia: ${parseFloat(carrera.distancia).toFixed(2)} km</p>
+            <p>Tiempo: ${parseFloat(carrera.tiempo).toFixed(2)} min</p>
+            <p>Ritmo: ${parseFloat(carrera.ritmoPromedio).toFixed(2)} min/km</p>
+            <p>Calorías: ${parseFloat(carrera.calorias).toFixed(2)} kcal</p>
             <button onclick="eliminarCarrera(${index})">Eliminar</button>
             <button onclick="exportarGPXGuardada(${index})">Exportar GPX</button>
         `;
