--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>RunnersPace Pro</h1>
+        <h1>Marca tu Propio Ritmo</h1>
         <div id="map"></div>
         <div id="feedback"></div>
         <div id="carrera-controls" style="display: none;">
