--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             margin: 10px 0;
         }
         #map {
-            flex: 1;
+            height: 300px; /* Altura fija reducida */
             border-radius: 10px;
             margin-bottom: 10px;
         }
