--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             background-color: #333;
         }
         .main-button {
-            background-color: #4CAF50;
+            background-color: #e6131d;
             border: none;
             color: white;
             padding: 10px 20px;
@@ -64,7 +64,7 @@
             margin-top: 10px;
         }
         .sub-button {
-            background-color: #008CBA;
+            background-color: #f16311;
             border: none;
             color: white;
             padding: 8px 16px;
