--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             margin: 10px 0;
         }
         #map {
-            height: 300px; /* Altura fija reducida */
+            height: 40vh; /* 40% de la altura de la ventana del navegador */
             border-radius: 10px;
             margin-bottom: 10px;
         }
