--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            background-color: #f0f0f0;
+            background-color: #caf15e;
         }
         .container {
             flex: 1;
@@ -125,7 +125,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>RunnersPace Pro</h1>
+        <h1>Mejora tus ritmos</h1>
         <div id="map"></div>
         <div id="feedback"></div>
         <div id="carrera-controls" style="display: none;">
