--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             padding: 0px;
             margin: 10px 0;
             border: 1px solid #ddd;
-            border-radius: 10px;
+            border-radius: 5px;
             box-sizing: border-box;
             font-size: 13px;
             text-align: center;
@@ -148,21 +148,20 @@
         #creator-info {
             background-color: #112075;
             color: white;
-            padding: 10px 0;
+            padding: 1px 0;
             text-align: center;
             font-size: 0.9em;
             width: 100%;
             box-sizing: border-box;
         }
         footer {
-            text-align: center;
-            margin: 20px auto 0;
-            padding: 10px;
             background-color: #112075;
             color: white;
-            border-radius: 25px;
+            padding: 1px 0;
+            text-align: center;
             font-size: 0.9em;
-            max-width: 90%;
+            width: 100%;
+            box-sizing: border-box;
         }
     </style>
 </head>
@@ -230,7 +229,7 @@
         <div id="carrerasGuardadas" class="card"></div>
        
         <footer>
-            <p>RunnerPace PRo Versión de prueba</p>
+            <p>RunnerPace PRo - Versión de prueba</p>
         </footer>
     </div>
     <!-- Script de Google Maps para el mapa -->
