--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
                 center: { lat: -34.397, lng: 150.644 },
-                zoom: 15,
+                zoom: 19,
+                tilt: 80,
             });
             marker = new google.maps.Marker({
                 map: map,
